--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,28 @@
-# Compiled class file
-*.class
-
-# Log file
+# ----- OS/IDE -----
+.DS_Store
+Thumbs.db
+.idea/
 *.log
 
-# BlueJ files
-*.ctxt
+# ----- Node / React -----
+/frontend/node_modules/
+yarn-error.log
+npm-debug.log
+# Build/Dist folders
+/frontend/build/
+/frontend/dist/
+# Coverage
+/frontend/coverage/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# ----- Java / Spring Boot -----
+/backend/target/
+.gradle/
+/backend/build/
+*.class
 *.jar
 *.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+*.iml
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# ----- Misc -----
+.env
+.env.*
