--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ npm-debug.log
 /frontend/dist/
 # Coverage
 /frontend/coverage/
+# vite
+/frontend/.vite/
 
 # ----- Java / Spring Boot -----
 /backend/target/
