--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "favicons": "node scripts/generate-favicons.cjs"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
@@ -18,6 +19,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -38,9 +40,11 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "favicons-webpack-plugin": "^6.0.1",
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.5.3",
+    "sharp": "^0.34.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
